external-secret-operator/add-external-secret-prefix/add-external-secret-prefix.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-external-secret-prefix
  annotations:
    policies.kyverno.io/title: Add prefix to exernal secret
    policies.kyverno.io/category: ExternalSecretOperator
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: ExternalSecret
    kyverno.io/kyverno-version: 1.7.1
    policies.kyverno.io/minversion: 1.6.0
    kyverno.io/kubernetes-version: "1.23"
    policies.kyverno.io/description: >- 
      This Policy mutate secretRef key to add namespace as prefix.
      External Secret Operator proposes to use kyverno to force ExternalSecrets
      to have namespace prefix so that kubernetes administrators do not need to
      define permissions and users per namespace.
      Doing this developers are abstracted by administrators naming convenction and will not 
      be able to access to secrets from other namespaces.
      In this example on patch change "prefix-" for your prefix. For example: {{ request.namespace }}
spec:
  rules:
  - name: add-external-secret-prefix
    match:
      resources:
        kinds:
        - ExternalSecret
    mutate:
      foreach: 
      - list: "request.object.spec.data"
        patchesJson6902: |-
          - path: /spec/data/{{elementIndex}}/remoteRef
            op: add
            value: {
              "key" : "prefix-{{element.remoteRef.key}}", 
              "property": {{element.remoteRef.property}},
              "conversionStrategy": {{element.remoteRef.conversionStrategy}},
              "decodingStrategy": {{element.remoteRef.decodingStrategy}}
            }
