external-secret-operator/add-external-secret-prefix/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-external-secret-prefix
policies:
- ../add-external-secret-prefix.yaml
resources:
- resource.yaml
results:
- kind: ExternalSecret
  patchedResources: patched.yaml
  policy: add-external-secret-prefix
  resources:
  - example
  result: pass
  rule: add-external-secret-prefix
